--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:paddingEnd="8dp"
         android:inputType="text"
         android:textSize="20dp"
-        android:hint="Имя пользователя"
+        android:hint="Email"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
